--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
   <%= javascript_include_tag "custom.js", :defer => "defer" %>
   
   <%= csrf_meta_tags %>
-  <meta name="description" content="Greate Bootstrap Theme"/>
-  <meta name="keywords" content="Template, Theme, web, html5, css3, Bootstrap" />
-  <meta name="author" content="Łukasz Holeczek from creativeLabs"/>
+  <meta name="description" content="Generate resumes, cv, portfolio and personal sites"/>
+  <meta name="keywords" content="Resumes, CV, Portfolio, Personal, Site, Template, Theme, web, html5, css3, Bootstrap" />
+  <meta name="author" content="GroundZero-Labs"/>
   <!-- end: Meta -->
   
   <!-- start: Mobile Specific -->
@@ -111,25 +111,25 @@
     <div id="da-slider" class="da-slider">
       <div class="da-slide">
         <h2>Twitter Bootstrap</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p>We do not brew our CSS and Javascript from ground up. Portfoliolizer is built with the latest Twitter Bootstrap themes; so you are sure that it will be cross platform compatible and always up-to-date.</p>
         <a href="#" class="da-link">Read more</a>
         <div class="da-img"><%= image_tag "parallax-slider/twitter.png", alt: "twitter" %></div>
       </div>
       <div class="da-slide">
         <h2>Responsive Design</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p>Why have a page that only works with certain screen resolution?  With Portfoliolizer we ensure responsive pages that can be viewed at any angle!</p>
         <a href="#" class="da-link">Read more</a>
         <div class="da-img"><%= image_tag "parallax-slider/responsive.png", alt: "responsive" %></div>
       </div>
       <div class="da-slide">
         <h2>HTML5</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p>Do you even understand what this mean?  If so; yes we use HTML5, the latest and greatest. Else; just think of HTML5 as the latest and greatest way to make your site!</p>
         <a href="#" class="da-link">Read more</a>
         <div class="da-img"><%= image_tag "parallax-slider/html5.png", alt: "html5" %></div>
       </div>
       <div class="da-slide">
         <h2>CSS3</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+        <p>If you love to inline style everything then Portfoliolizer will surely disappoint you. For those who don't, we got you covered with flashy CSS.</p>
         <a href="#" class="da-link">Read more</a>
         <div class="da-img"><%= image_tag "parallax-slider/css3.png", alt: "css3" %></div>
       </div>
@@ -151,9 +151,9 @@
           <!-- start: Hero Unit - Main hero unit for a primary marketing message or call to action -->
           <div class="hero-unit">
             <p>
-          This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
-        </p>
-            <p><a class="btn btn-success btn-large">Learn more &raquo;</a></p>
+              Your one stop shop for personalized Portfolio, Resumes, Cover Letters and everything you can think of!
+            </p>
+            <p><%= link_to "Get Started!", "#", class: "btn btn-large btn-success" %></p>
           </div>
       <!-- end: Hero Unit -->
 
@@ -165,7 +165,7 @@
             <i class="ico-ok circle big"></i>
             <div class="title"><h3>Easy to use</h3></div>
             <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+              Decide on what you want to do, choose your template, fill in what you want shown and off you go!
             </p>
             <div class="clear"></div>
           </div>
@@ -174,9 +174,9 @@
             <div class="span4">
                 <div class="icons-box">
             <i class="ico-ipad circle big"></i>
-            <div class="title"><h3>Responsive</h3></div>
+            <div class="title"><h3>Cutting Edge</h3></div>
             <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+              The website will not look like a high school student's work or what you grandparents made 50 years ago; we promise!
             </p>
             <div class="clear"></div>
           </div>
@@ -187,7 +187,7 @@
             <i class="ico-heart circle big"></i>
             <div class="title"><h3>User friendly</h3></div>
             <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+              We always put you first when we build stuff so of course it's user friendly!
             </p>
             <div class="clear"></div>
           </div>
@@ -198,7 +198,7 @@
           
       <hr>
     
-      <!-- start Clients List -->  
+      <!-- start Clients List  
       <div class="clients-carousel">
         <ul class="slides clients">
           <li><%= image_tag "logos/1.png", alt: "logos" %> </li>
@@ -214,9 +214,9 @@
         </ul>
     
       </div>
-      <!-- end Clients List -->
+      end Clients List
     
-      <hr>
+      <hr> -->
       
       <!-- start: Row -->
       <div class="row">
@@ -229,8 +229,8 @@
             <div class="icons-box-vert">
               <i class="ico-ok ico-color circle-color big"></i>
               <div class="icons-box-vert-info">
-                <h3>Easy to use</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                <h3>Portfolio</h3>
+                <p>Need a web page to show off what you done?</p>
               </div>
               <div class="clear"></div>
             </div>
@@ -242,8 +242,8 @@
             <div class="icons-box-vert">
               <i class="ico-cup  ico-white circle-color-full big-color"></i>
               <div class="icons-box-vert-info">
-                <h3>Best choice</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                <h3>Resumes</h3>
+                <p>Need a place where you can put your resumes and your skillset?</p>
               </div>
               <div class="clear"></div>
             </div>
@@ -255,8 +255,8 @@
             <div class="icons-box-vert">
               <i class="ico-ipad ico-color circle-color big"></i>
               <div class="icons-box-vert-info">
-                <h3>Fully Responsive</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                <h3>Business</h3>
+                <p>Need to showcase your business; let it be a startup, restaurant or a lemonade stand.</p>
               </div>
               <div class="clear"></div>
             </div>
@@ -268,8 +268,8 @@
             <div class="icons-box-vert">
               <i class="ico-thumbs-up  ico-white circle-color-full big-color"></i>
               <div class="icons-box-vert-info">
-                <h3>Social Network</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                <h3>Personal</h3>
+                <p>Or do you just need a place to show people what you are having for lunch.</p>
               </div>
               <div class="clear"></div>
             </div>
@@ -311,21 +311,14 @@
         <div class="span9">
           
           <div id="footer-menu-links">
-
-            <ul id="footer-nav">
-
-              <li><a href="index.html">Start</a></li>
-
-              <li><a href="about.html">About</a></li>
-
-              <li><a href="services.html">Services</a></li>
-
-              <li><a href="pricing.html">Pricing</a></li>
-              
-              <li><a href="contact.html">Contact</a></li>
-
-            </ul>
-
+            <div class="span3">
+              <ul>
+                <li>
+                  <a><label>What are you waiting for?</label></a>
+              </li>
+              </ul>
+            </div>
+              <%= link_to "Get Started!", "#", class: "btn btn-large btn-success" %>
           </div>
           
         </div>
@@ -364,7 +357,10 @@
           
           <h3>About Us</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+            Portfoliozer is brought to you by the guys at <%= link_to "<GroundZeroLabs>", "http://gz-labs.com" %>.<br/>
+            * We like to be the frontiers of software development, but we are nothing more then a bunch of kids coding!<br/>
+            * We love to build software without restrictions or hassles.<br/>
+            * We have one goal and one only and that is to build high quality software.<br/>
           </p>
             
         </div>
@@ -375,9 +371,8 @@
           
           <h3>We are here!</h3>
           <div id="small-map-container"><a href="contact.html"></a></div>
-          <iframe id="small-map" width="210" height="210" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0" src="https://maps.google.pl/maps?f=q&amp;source=s_q&amp;hl=pl&amp;geocode=&amp;q=Los+Angeles,+Kalifornia,+Stany+Zjednoczone&amp;aq=0&amp;oq=Los&amp;sll=50.143066,18.85267&amp;sspn=0.057207,0.168915&amp;t=m&amp;ie=UTF8&amp;hq=&amp;hnear=Los+Angeles,+Hrabstwo+Los+Angeles,+Kalifornia,+Stany+Zjednoczone&amp;ll=34.052234,-118.243685&amp;spn=0.036979,0.084457&amp;z=14&amp;iwloc=near&amp;output=embed"></iframe>
-          
-        </div>
+            <iframe id="small-map" width="210" height="210" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=san+diego&amp;sll=46.216667,7.816667&amp;sspn=0.087064,0.176468&amp;t=m&amp;g=embd&amp;ie=UTF8&amp;hq=&amp;hnear=San+Diego,+California&amp;ll=32.715329,-117.157255&amp;spn=0.21158,0.352936&amp;z=12&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=san+diego&amp;sll=46.216667,7.816667&amp;sspn=0.087064,0.176468&amp;t=m&amp;g=embd&amp;ie=UTF8&amp;hq=&amp;hnear=San+Diego,+California&amp;ll=32.715329,-117.157255&amp;spn=0.21158,0.352936&amp;z=12" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+          </div>
         <!-- end: Photo Stream -->
 
         <div class="span6">
