--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -468,7 +468,7 @@
     
       <div class="sixteen columns">
         <p>
-          &copy; 2012, creativeLabs. Designed by creativeLabs in Poland <%=image_tag "poland2.png", alt: "Poland", style: "margin-top:-4px"%>
+          &copy; 2012 Developed + Designed by GroundZeroLabs-San Diego <%=image_tag "poland2.png", alt: "Poland", style: "margin-top:-4px"%>
         </p>
       </div>
   
