added the about page, with images and minor UI fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,6 @@
   <title>Portfoliolizer</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag "custom.js", :defer => "defer" %>
   
   <%= csrf_meta_tags %>
   <meta name="description" content="Generate resumes, cv, portfolio and personal sites"/>
@@ -71,23 +70,11 @@
                     </a>
                     <div class="nav-collapse collapse">
                       <ul class="nav">
-                          <li class="active"><a href="index.html">Home</a></li>
-                          <li><a href="about.html">About</a></li>
-                  <li><a href="services.html">Services</a></li>
-                  <li><a href="pricing.html">Pricing</a></li>
-                          <li><a href="contact.html">Contact</a></li>
-                          <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li class="divider"></li>
-                                <li class="nav-header">Nav header</li>
-                                <li><a href="#">Separated link</a></li>
-                                <li><a href="#">One more separated link</a></li>
-                            </ul>
-                          </li>
+                          <li class="<%='active' if controller?('welcome') && action?('index')%>"><%= link_to "Home", root_path %></li>
+                          <li class="<%='active' if controller?('welcome') && action?('started')%>"><%= link_to "Getting Started", "" %></li>
+                          <li class="<%='active' if controller?('welcome') && action?('folios')%>"><%= link_to "Folios", "" %></li>
+                          <li class="<%='active' if controller?('welcome') && action?('about')%>"><%= link_to "About", about_welcome_index_path %></li>
+                          <li><a href="about.html">Login</a></li>
                       </ul>
                     </div>
                 </div>
@@ -105,378 +92,12 @@
   </header>
   <!--end: Header-->
   
-  <!-- start: Slider -->
-  <div class="slider-wrapper">
-
-    <div id="da-slider" class="da-slider">
-      <div class="da-slide">
-        <h2>Twitter Bootstrap</h2>
-        <p>We do not brew our CSS and Javascript from ground up. Portfoliolizer is built with the latest Twitter Bootstrap themes; so you are sure that it will be cross platform compatible and always up-to-date.</p>
-        <a href="#" class="da-link">Read more</a>
-        <div class="da-img"><%= image_tag "parallax-slider/twitter.png", alt: "twitter" %></div>
-      </div>
-      <div class="da-slide">
-        <h2>Responsive Design</h2>
-        <p>Why have a page that only works with certain screen resolution?  With Portfoliolizer we ensure responsive pages that can be viewed at any angle!</p>
-        <a href="#" class="da-link">Read more</a>
-        <div class="da-img"><%= image_tag "parallax-slider/responsive.png", alt: "responsive" %></div>
-      </div>
-      <div class="da-slide">
-        <h2>HTML5</h2>
-        <p>Do you even understand what this mean?  If so; yes we use HTML5, the latest and greatest. Else; just think of HTML5 as the latest and greatest way to make your site!</p>
-        <a href="#" class="da-link">Read more</a>
-        <div class="da-img"><%= image_tag "parallax-slider/html5.png", alt: "html5" %></div>
-      </div>
-      <div class="da-slide">
-        <h2>CSS3</h2>
-        <p>If you love to inline style everything then Portfoliolizer will surely disappoint you. For those who don't, we got you covered with flashy CSS.</p>
-        <a href="#" class="da-link">Read more</a>
-        <div class="da-img"><%= image_tag "parallax-slider/css3.png", alt: "css3" %></div>
-      </div>
-      <nav class="da-arrows">
-        <span class="da-arrows-prev"></span>
-        <span class="da-arrows-next"></span>
-      </nav>
-    </div>
-    
-  </div>
-  <!-- end: Slider -->
+  <%= yield :main_slider %>
       
-  <!--start: Wrapper-->
-  <div id="wrapper">
-        
-    <!--start: Container -->
-      <div class="container">
+  <%= yield :feature_list %>
   
-          <!-- start: Hero Unit - Main hero unit for a primary marketing message or call to action -->
-          <div class="hero-unit">
-            <p>
-              Your one stop shop for personalized Portfolio, Resumes, Cover Letters and everything you can think of!
-            </p>
-            <p><%= link_to "Get Started!", "#", class: "btn btn-large btn-success" %></p>
-          </div>
-      <!-- end: Hero Unit -->
-
-          <!-- start: Row -->
-          <div class="row">
+  <%= yield %>
   
-            <div class="span4">
-                <div class="icons-box">
-            <i class="ico-ok circle big"></i>
-            <div class="title"><h3>Easy to use</h3></div>
-            <p>
-              Decide on what you want to do, choose your template, fill in what you want shown and off you go!
-            </p>
-            <div class="clear"></div>
-          </div>
-            </div>
-
-            <div class="span4">
-                <div class="icons-box">
-            <i class="ico-ipad circle big"></i>
-            <div class="title"><h3>Cutting Edge</h3></div>
-            <p>
-              The website will not look like a high school student's work or what you grandparents made 50 years ago; we promise!
-            </p>
-            <div class="clear"></div>
-          </div>
-            </div>
-
-            <div class="span4">
-                <div class="icons-box">
-            <i class="ico-heart circle big"></i>
-            <div class="title"><h3>User friendly</h3></div>
-            <p>
-              We always put you first when we build stuff so of course it's user friendly!
-            </p>
-            <div class="clear"></div>
-          </div>
-            </div>
-
-          </div>
-      <!-- end: Row -->
-          
-      <hr>
-    
-      <!-- start Clients List  
-      <div class="clients-carousel">
-        <ul class="slides clients">
-          <li><%= image_tag "logos/1.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/2.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/3.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/4.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/5.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/6.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/7.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/8.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/9.png", alt: "logos" %> </li>
-          <li><%= image_tag "logos/10.png", alt: "logos" %></li>
-        </ul>
-    
-      </div>
-      end Clients List
-    
-      <hr> -->
-      
-      <!-- start: Row -->
-      <div class="row">
-        
-        <!-- start: Icon Boxes -->
-        <div class="icons-box-vert-container">
-
-          <!-- start: Icon Box Start -->
-          <div class="span6">
-            <div class="icons-box-vert">
-              <i class="ico-ok ico-color circle-color big"></i>
-              <div class="icons-box-vert-info">
-                <h3>Portfolio</h3>
-                <p>Need a web page to show off what you done?</p>
-              </div>
-              <div class="clear"></div>
-            </div>
-          </div>
-          <!-- end: Icon Box-->
-
-          <!-- start: Icon Box Start -->
-          <div class="span6">
-            <div class="icons-box-vert">
-              <i class="ico-cup  ico-white circle-color-full big-color"></i>
-              <div class="icons-box-vert-info">
-                <h3>Resumes</h3>
-                <p>Need a place where you can put your resumes and your skillset?</p>
-              </div>
-              <div class="clear"></div>
-            </div>
-          </div>
-          <!-- end: Icon Box -->
-
-          <!-- start: Icon Box Start -->
-          <div class="span6">
-            <div class="icons-box-vert">
-              <i class="ico-ipad ico-color circle-color big"></i>
-              <div class="icons-box-vert-info">
-                <h3>Business</h3>
-                <p>Need to showcase your business; let it be a startup, restaurant or a lemonade stand.</p>
-              </div>
-              <div class="clear"></div>
-            </div>
-          </div>
-          <!-- end: Icon Box -->
-
-          <!-- start: Icon Box Start -->
-          <div class="span6">
-            <div class="icons-box-vert">
-              <i class="ico-thumbs-up  ico-white circle-color-full big-color"></i>
-              <div class="icons-box-vert-info">
-                <h3>Personal</h3>
-                <p>Or do you just need a place to show people what you are having for lunch.</p>
-              </div>
-              <div class="clear"></div>
-            </div>
-          </div>
-          <!-- end: Icon Box -->
-
-        </div>
-        <!-- end: Icon Boxes -->
-        <div class="clear"></div>
-      </div>
-      <!-- end: Row -->
-      
-      <hr>
-      
-    </div>
-    <!--end: Container-->
-  
-  </div>
-  <!-- end: Wrapper  -->      
-
-    <!-- start: Footer Menu -->
-  <div id="footer-menu" class="hidden-tablet hidden-phone">
-
-    <!-- start: Container -->
-    <div class="container">
-      
-      <!-- start: Row -->
-      <div class="row">
-
-        <!-- start: Footer Menu Logo -->
-        <div class="span2">
-          <div id="footer-menu-logo">
-            <a href="#"><%= image_tag "logo-footer-menu.png", alt: "footer" %></a>
-          </div>
-        </div>
-        <!-- end: Footer Menu Logo -->
-
-        <!-- start: Footer Menu Links-->
-        <div class="span9">
-          
-          <div id="footer-menu-links">
-            <div class="span3">
-              <ul>
-                <li>
-                  <a><label>What are you waiting for?</label></a>
-              </li>
-              </ul>
-            </div>
-              <%= link_to "Get Started!", "#", class: "btn btn-large btn-success" %>
-          </div>
-          
-        </div>
-        <!-- end: Footer Menu Links-->
-
-        <!-- start: Footer Menu Back To Top -->
-        <div class="span1">
-            
-          <div id="footer-menu-back-to-top">
-            <a href="#"></a>
-          </div>
-        
-        </div>
-        <!-- end: Footer Menu Back To Top -->
-      
-      </div>
-      <!-- end: Row -->
-      
-    </div>
-    <!-- end: Container  -->  
-
-  </div>  
-  <!-- end: Footer Menu -->
-
-  <!-- start: Footer -->
-  <div id="footer">
-    
-    <!-- start: Container -->
-    <div class="container">
-      
-      <!-- start: Row -->
-      <div class="row">
-
-        <!-- start: About -->
-        <div class="span3">
-          
-          <h3>About Us</h3>
-          <p>
-            Portfoliozer is brought to you by the guys at <%= link_to "<GroundZeroLabs>", "http://gz-labs.com" %>.<br/>
-            * We like to be the frontiers of software development, but we are nothing more then a bunch of kids coding!<br/>
-            * We love to build software without restrictions or hassles.<br/>
-            * We have one goal and one only and that is to build high quality software.<br/>
-          </p>
-            
-        </div>
-        <!-- end: About -->
-
-        <!-- start: Photo Stream -->
-        <div class="span3">
-          
-          <h3>We are here!</h3>
-          <div id="small-map-container"><a href="contact.html"></a></div>
-            <iframe id="small-map" width="210" height="210" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=san+diego&amp;sll=46.216667,7.816667&amp;sspn=0.087064,0.176468&amp;t=m&amp;g=embd&amp;ie=UTF8&amp;hq=&amp;hnear=San+Diego,+California&amp;ll=32.715329,-117.157255&amp;spn=0.21158,0.352936&amp;z=12&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=san+diego&amp;sll=46.216667,7.816667&amp;sspn=0.087064,0.176468&amp;t=m&amp;g=embd&amp;ie=UTF8&amp;hq=&amp;hnear=San+Diego,+California&amp;ll=32.715329,-117.157255&amp;spn=0.21158,0.352936&amp;z=12" style="color:#0000FF;text-align:left">View Larger Map</a></small>
-          </div>
-        <!-- end: Photo Stream -->
-
-        <div class="span6">
-        
-          <!-- start: Follow Us -->
-          <h3>Follow Us!</h3>
-          <ul class="social-grid">
-            <li>
-              <div class="social-item">        
-                <div class="social-info-wrap">
-                  <div class="social-info">
-                    <div class="social-info-front social-twitter">
-                      <a href="http://twitter.com"></a>
-                    </div>
-                    <div class="social-info-back social-twitter-hover">
-                      <a href="http://twitter.com"></a>
-                    </div>  
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="social-item">        
-                <div class="social-info-wrap">
-                  <div class="social-info">
-                    <div class="social-info-front social-facebook">
-                      <a href="http://facebook.com"></a>
-                    </div>
-                    <div class="social-info-back social-facebook-hover">
-                      <a href="http://facebook.com"></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="social-item">        
-                <div class="social-info-wrap">
-                  <div class="social-info">
-                    <div class="social-info-front social-dribbble">
-                      <a href="http://dribbble.com"></a>
-                    </div>
-                    <div class="social-info-back social-dribbble-hover">
-                      <a href="http://dribbble.com"></a>
-                    </div>  
-                  </div>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="social-item">        
-                <div class="social-info-wrap">
-                  <div class="social-info">
-                    <div class="social-info-front social-flickr">
-                      <a href="http://flickr.com"></a>
-                    </div>
-                    <div class="social-info-back social-flickr-hover">
-                      <a href="http://flickr.com"></a>
-                    </div>  
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-          <!-- end: Follow Us -->
-        
-          <!-- start: Newsletter -->
-          <form id="newsletter">
-            <h3>Newsletter</h3>
-            <p>Please leave us your email</p>
-            <label for="newsletter_input">@:</label>
-            <input type="text" id="newsletter_input"/>
-            <input type="submit" id="newsletter_submit" value="submit">
-          </form>
-          <!-- end: Newsletter -->
-        
-        </div>
-        
-      </div>
-      <!-- end: Row -->  
-      
-    </div>
-    <!-- end: Container  -->
-
-  </div>
-  <!-- end: Footer -->
-
-  <!-- start: Copyright -->
-  <div id="copyright">
-  
-    <!-- start: Container -->
-    <div class="container">
-    
-      <div class="sixteen columns">
-        <p>
-          &copy; 2012 Developed + Designed by GroundZeroLabs-San Diego <%=image_tag "poland2.png", alt: "Poland", style: "margin-top:-4px"%>
-        </p>
-      </div>
-  
-    </div>
-    <!-- end: Container  -->
-    
-  </div>  
-  <!-- end: Copyright -->
-
+  <%= render "shared/footer" %>
 </body>
 </html>
