--- a/app/views/welcome/_mike.html.erb
+++ b/app/views/welcome/_mike.html.erb
@@ -8,11 +8,10 @@
         Hey guys this is Michael Luong!
         <b>Nickname:</b> Micky, Mio<br/>
         Currently working at SAIC!  Graduated
-        from UC San Diego with CS. On my knees again!<br/>
-        More of <%= link_to "GroundZeroLabs", "http://www.gz-labs.com"%><br/>
-        See me <%= link_to "Facebook", "https://www.facebook.com/mluong517" %>.
+        from UC San Diego with CS. On my knees again without kneepads!<br/>
+        <br/>
+        <%= link_to "My Personal Page", "https://www.facebook.com/mluong517", class: "info" %>
       </p>
-      <%= link_to "My Personal Page", "https://www.facebook.com/mluong517", class: "info" %>
     </div>
   </div>
   <div class="clear"></div>
