--- a/app/views/welcome/_tan.html.erb
+++ b/app/views/welcome/_tan.html.erb
@@ -8,11 +8,10 @@
         Hey guys this is Tan Cao!
         <b>Nickname:</b> Penis Man<br/>
         Currently working at a corner around you!  Graduated
-        from San Diego State with Finance. Back to my corner!<br/>
-        More of <%= link_to "GroundZeroLabs", "http://www.gz-labs.com"%><br/>
-        See me <%= link_to "Facebook", "https://www.facebook.com/tan.cao.940" %>.
+        from San Diego State with Finance. Back to my corner, all day err day!<br/>
+        <br/>
+        <%= link_to "My Personal Page", "https://www.facebook.com/tan.cao.940", class: "info" %>
       </p>
-      <%= link_to "My Personal Page", "https://www.facebook.com/tan.cao.940", class: "info" %>
     </div>
   </div>
   <div class="clear"></div>
